Added more fields and added butterknife to bindviews

--- a/app/src/main/res/layout/movie_view.xml
+++ b/app/src/main/res/layout/movie_view.xml
@@ -4,47 +4,59 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/thumbnail_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:id="@+id/thumbnail_image"/>
+        android:layout_alignParentStart="true"
+        android:contentDescription="@string/image_description"/>
 
     <TextView
         android:id="@+id/title_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Title" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
-        android:id="@+id/rating_view"
+        android:id="@+id/mpaa_rating_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title_view"/>
+        android:layout_below="@id/title_view"
+        android:layout_toEndOf="@id/thumbnail_image"
+        />
+
+    <TextView
+        android:id="@+id/critic_pick_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/headline_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rating_view"/>
+        android:layout_below="@id/mpaa_rating_view" />
 
     <TextView
-        android:id="@+id/reviewer_view"
+        android:id="@+id/byline_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/headline_view"/>
+        android:layout_below="@id/headline_view" />
 
     <TextView
-        android:id="@+id/date_view"
+        android:id="@+id/publication_date_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/reviewer_view"/>
+        android:layout_below="@id/byline_view" />
+
+    <TextView
+        android:id="@+id/opening_date_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/summary_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/date_view"/>
+        android:layout_below="@id/publication_date_view" />
 
 
 </RelativeLayout>
