--- a/app/src/main/res/layout/movie_view.xml
+++ b/app/src/main/res/layout/movie_view.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp">
 
     <ImageView
         android:id="@+id/thumbnail_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:contentDescription="@string/image_description"/>
+        android:layout_centerVertical="true"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/image_description" />
 
     <TextView
         android:id="@+id/title_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/thumbnail_image"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -21,42 +24,56 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/title_view"
-        android:layout_toEndOf="@id/thumbnail_image"
-        />
+        android:layout_toEndOf="@+id/thumbnail_image" />
 
     <TextView
         android:id="@+id/critic_pick_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/mpaa_rating_view"
+        android:layout_toEndOf="@+id/thumbnail_image" />
 
     <TextView
         android:id="@+id/headline_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/mpaa_rating_view" />
+        android:layout_below="@id/critic_pick_view"
+        android:layout_toEndOf="@+id/thumbnail_image" />
 
     <TextView
         android:id="@+id/byline_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/headline_view" />
+        android:layout_below="@id/headline_view"
+        android:layout_toEndOf="@+id/thumbnail_image" />
 
     <TextView
         android:id="@+id/publication_date_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/byline_view" />
+        android:layout_below="@id/byline_view"
+        android:layout_toEndOf="@+id/thumbnail_image" />
 
     <TextView
         android:id="@+id/opening_date_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/publication_date_view"
+        android:layout_toEndOf="@+id/thumbnail_image" />
+
+    <TextView
+        android:id="@+id/date_updated_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/opening_date_view"
+        android:layout_toEndOf="@+id/thumbnail_image" />
 
     <TextView
         android:id="@+id/summary_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/publication_date_view" />
+        android:layout_below="@id/date_updated_view"
+        android:layout_toEndOf="@+id/thumbnail_image" />
 
 
 </RelativeLayout>
