--- a/app/src/main/res/layout/movie_view.xml
+++ b/app/src/main/res/layout/movie_view.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_margin="16dp"
+        android:minWidth="90dp"
         android:contentDescription="@string/image_description" />
 
     <TextView
