--- a/app/src/main/res/layout/movie_view.xml
+++ b/app/src/main/res/layout/movie_view.xml
@@ -10,8 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_margin="16dp"
-        android:minWidth="90dp"
-        android:contentDescription="@string/image_description" />
+        android:contentDescription="@string/image_description"
+        android:minWidth="90dp" />
 
     <TextView
         android:id="@+id/title_view"
